--- a/eclipse-jarinjarloader-swt-sample/pom.xml
+++ b/eclipse-jarinjarloader-swt-sample/pom.xml
@@ -6,19 +6,17 @@
 		<maven>3.0.4</maven>
 	</prerequisites>
 	<parent>
-		<groupId>org.raisercostin.utils</groupId>
-		<artifactId>maven-defaults</artifactId>
-		<version>7</version>
+		<groupId>org.raisercostin</groupId>
+		<artifactId>eclipse-jarinjarloader-parent</artifactId>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
-	<groupId>org.raisercostin</groupId>
 	<artifactId>eclipse-jarinjarloader-swt-sample</artifactId>
-	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
 		<swt.version>4.3</swt.version>
 		<main.class>org.raisercostin.jarinjarloader.sample.JarInJarSwtMain</main.class>
-		<jarinjarloader.version>1.1-SNAPSHOT</jarinjarloader.version>
+		<jarinjarloader.version>${project.version}</jarinjarloader.version>
 	</properties>
 
 	<repositories>
