--- a/eclipse-jarinjarloader-swt-sample/pom.xml
+++ b/eclipse-jarinjarloader-swt-sample/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.raisercostin</groupId>
 		<artifactId>eclipse-jarinjarloader-parent</artifactId>
-		<version>1.2-SNAPSHOT</version>
+		<version>1.2</version>
 	</parent>
 	<artifactId>eclipse-jarinjarloader-swt-sample</artifactId>
 	<packaging>jar</packaging>
