--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	</parent>
 	<groupId>org.raisercostin</groupId>
 	<artifactId>eclipse-jarinjarloader-parent</artifactId>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2</version>
 	<packaging>pom</packaging>
 
 	<properties>
@@ -54,7 +54,7 @@
 		<connection>scm:git:${github.url}.git</connection>
 		<developerConnection>scm:git:${github.url}.git</developerConnection>
 		<url>${github.url}</url>
-		<tag>${project.artifactId}-${project.version}</tag>
+		<tag>eclipse-jarinjarloader-parent-1.2</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
