--- a/eclipse-jarinjarloader-swt-sample/pom.xml
+++ b/eclipse-jarinjarloader-swt-sample/pom.xml
@@ -18,20 +18,6 @@
 		<jarinjarloader.version>${project.version}</jarinjarloader.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>jcenter-bintray</id>
-			<name>Bintray JCenter Maven Repository</name>
-			<layout>default</layout>
-			<url>https://jcenter.bintray.com/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -86,7 +72,15 @@
 						<manifestEntries>
 							<Class-Path>./</Class-Path>
 							<Rsrc-Main-Class>${main.class}</Rsrc-Main-Class>
-							<OS-Conditional-Class-Path>linux,i386,org.eclipse.swt.gtk.linux.x86:linux,x86_64,org.eclipse.swt.gtk.linux.x86_64:linux,amd64,org.eclipse.swt.gtk.linux.x86_64:windows,x86,org.eclipse.swt.win32.win32.x86:windows 7,x86,org.eclipse.swt.win32.win32.x86:windows,x86_64,org.eclipse.swt.win32.win32.x86_64:windows,amd64,org.eclipse.swt.win32.win32.x86_64:mac os x,i386,org.eclipse.swt.cocoa.macosx:mac os x,x86_64,org.eclipse.swt.cocoa.macosx.x86_64</OS-Conditional-Class-Path>
+							<Class-Path-Filter-Match-On-osName-linux---osArch-i386>org.eclipse.swt.gtk.linux.x86</Class-Path-Filter-Match-On-osName-linux---osArch-i386>
+							<Class-Path-Filter-Match-On-osName-linux---osArch-x86-64>org.eclipse.swt.gtk.linux.x86_64</Class-Path-Filter-Match-On-osName-linux---osArch-x86-64>
+							<Class-Path-Filter-Match-On-osName-linux---osArch-amd64>org.eclipse.swt.gtk.linux.x86_64</Class-Path-Filter-Match-On-osName-linux---osArch-amd64>
+							<Class-Path-Filter-Match-On-osName-windows-7---osArch-x86>org.eclipse.swt.win32.win32.x86</Class-Path-Filter-Match-On-osName-windows-7---osArch-x86>
+							<Class-Path-Filter-Match-On-osName-windows---osArch-x86>org.eclipse.swt.win32.win32.x86</Class-Path-Filter-Match-On-osName-windows---osArch-x86>
+							<Class-Path-Filter-Match-On-osName-windows---osArch-x86-64>org.eclipse.swt.win32.win32.x86_64</Class-Path-Filter-Match-On-osName-windows---osArch-x86-64>
+							<Class-Path-Filter-Match-On-osName-windows---osArch-amd64>org.eclipse.swt.win32.win32.x86_64</Class-Path-Filter-Match-On-osName-windows---osArch-amd64>
+							<Class-Path-Filter-Match-On-osName-mac-os-x---osArch-i386>org.eclipse.swt.cocoa.macosx</Class-Path-Filter-Match-On-osName-mac-os-x---osArch-i386>
+							<Class-Path-Filter-Match-On-osName-mac-os-x---osArch-x86-64>org.eclipse.swt.cocoa.macosx.x86_64</Class-Path-Filter-Match-On-osName-mac-os-x---osArch-x86-64>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -230,4 +224,18 @@
 			</properties>
 		</profile>
 	</profiles>
+	<repositories>
+		<repository>
+			<id>jcenter-bintray</id>
+			<name>Bintray JCenter Maven Repository</name>
+			<layout>default</layout>
+			<url>https://jcenter.bintray.com/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
