--- a/eclipse-jarinjarloader-swt-sample/pom.xml
+++ b/eclipse-jarinjarloader-swt-sample/pom.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<prerequisites>
-		<maven>3.0.4</maven>
-	</prerequisites>
-	<parent>
-		<groupId>org.raisercostin</groupId>
-		<artifactId>eclipse-jarinjarloader-parent</artifactId>
-		<version>1.3-SNAPSHOT</version>
-	</parent>
+	<groupId>org.raisercostin</groupId>
 	<artifactId>eclipse-jarinjarloader-swt-sample</artifactId>
+	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
 		<swt.version>4.3</swt.version>
 		<main.class>org.raisercostin.jarinjarloader.sample.JarInJarSwtMain</main.class>
-		<jarinjarloader.version>${project.version}</jarinjarloader.version>
+		<jarinjarloader.version>1.2</jarinjarloader.version>
 	</properties>
 
 	<build>
